--- a/Java/spring_intro/spring-intro/spring-config-mixid/src/main/resources/fxml/scene.fxml
+++ b/Java/spring_intro/spring-intro/spring-config-mixid/src/main/resources/fxml/scene.fxml
@@ -3,7 +3,7 @@
 
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
-<AnchorPane fx:controller="ru.geekbrains.client.javafx.controller.Controller" xmlns:fx="http://javafx.com/fxml">
+<AnchorPane fx:controller="Controller" xmlns:fx="http://javafx.com/fxml">
 
     <VBox AnchorPane.topAnchor="0.0" AnchorPane.bottomAnchor="0.0"
           AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
