--- a/Java/spring_intro/spring-intro/spring-mvc/src/main/webapp/WEB-INF/view/product.html
+++ b/Java/spring_intro/spring-intro/spring-mvc/src/main/webapp/WEB-INF/view/product.html
@@ -1,44 +1,51 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-        <title>Product</title>
-    </head>
-    <body>
-        <div class="container">
-            <!-- Content here -->
-            <div class="row justify-content-center">
-                <a type="button" th:href="@{/}" class="btn btn-primary" style="margin-top: 50px">Cancel</a>
-            </div>
+    <title>Product</title>
+</head>
+<body>
+<div class="container">
+    <!-- Content here -->
+    <div class="row justify-content-center">
+        <a type="button" th:href="@{/}" class="btn btn-primary" style="margin-top: 50px">Cancel</a>
+    </div>
 
-            <form action="#" method="post" th:action="@{/save}" th:object="${product}">
-                <input id="id" type="hidden" th:field="*{id}"/>
+    <form action="#" method="post" th:action="@{/save}" th:object="${product}">
+        <input id="id" type="hidden" th:field="*{id}"/>
 
-                <div class="form-group">
-                    <label for="title">title</label>
-                    <input id="title" type="text" class="form-control" th:field="*{title}" placeholder="input product name"/>
-                </div>
-                <div class="form-group">
-                    <label for="cost">cost</label>
-                    <input id="cost" type="text" class="form-control" th:field="*{cost}" placeholder="input product cost"/>
-                </div>
-                <div class="row justify-content-end" style="margin: 0 5px">
-                    <button type="submit" class="btn btn-success">Save</button>
-                </div>
-            </form>
+        <div class="form-group">
+            <label for="title">title</label>
+            <input id="title" type="text" class="form-control" th:field="*{title}" placeholder="input product name"/>
         </div>
+        <div class="form-group">
+            <label for="cost">cost</label>
+            <input id="cost" type="text" class="form-control" th:field="*{cost}" placeholder="input product cost"/>
+        </div>
+        <div class="row justify-content-end" style="margin: 0 5px">
+            <button type="submit" class="btn btn-success">Save</button>
+        </div>
+    </form>
+</div>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
 
-    </body>
+</body>
 </html>
 
