--- a/Java/spring_intro/spring-intro/spring-mvc/src/main/webapp/WEB-INF/view/products.html
+++ b/Java/spring_intro/spring-intro/spring-mvc/src/main/webapp/WEB-INF/view/products.html
@@ -1,72 +1,110 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
-    <head>
-        <meta charset="UTF-8">
+<head>
+    <meta charset="UTF-8">
 
-        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <!-- Bootstrap CSS -->
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
 
-        <title>Products catalog</title>
-    </head>
-    <body>
-        <div class="container">
-            <!-- Content here -->
+    <title>Products catalog</title>
+</head>
+<body>
+<div class="container">
+    <!-- Content here -->
 
-            <form>
-                <table class="table">
-                    <thead>
-                    <tr>
-                        <th scope="col">min Cost</th>
-                        <th scope="col">max Cost</th>
-                        <th scope="col"></th>
-                    </tr>
-                    </thead>
-                    <tbody>
-                    <th>
-                        <input class="form-control" type="text" placeholder="введите минимальную цену" th:name="min">
-                    </th>
-                    <th>
-                        <input class="form-control" type="text" placeholder="введите максимальную цену" th:name="max">
-                    </th>
-                    <th>
-                        <button type="submit" class="btn btn-info">Применить</button>
-                    </th>
-                    </tbody>
-                </table>
-            </form>
+    <form>
+        <table class="table">
+            <thead>
+            <tr>
+                <th scope="col">min Cost</th>
+                <th scope="col">max Cost</th>
+                <th scope="col"></th>
+            </tr>
+            </thead>
+            <tbody>
+            <th>
+                <input class="form-control" type="text" placeholder="введите минимальную цену" th:name="min">
+            </th>
+            <th>
+                <input class="form-control" type="text" placeholder="введите максимальную цену" th:name="max">
+            </th>
+            <th>
+                <button type="submit" class="btn btn-info">Применить</button>
+            </th>
+            </tbody>
+        </table>
+    </form>
 
-            <div class="row justify-content-center" style="margin: 10px">
-                <a type="button" class="btn btn-success" th:href="@{/show/0}">add</a>
-            </div>
-            <table class="table table-striped">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col">id</th>
-                        <th scope="col">title</th>
-                        <th scope="col">cost</th>
-                        <th scope="col">action</th>
-                    </tr>
-                </thead>
-                <tbody>
-                    <tr th:each="product : ${products}">
-                        <th scope="row" th:text="${product.id}">product id</th>
-                        <td th:text="${product.title}">product title</td>
-                        <td th:text="${product.cost}">product cost</td>
-                        <td>
-                            <a type="button" class="btn btn-warning" th:href="@{/show/{id}(id = ${product.id})}">edit</a>
-                            <a type="button" class="btn btn-danger" th:href="@{/del/{id}(id = ${product.id})}">del</a>
-                        </td>
-                    </tr>
-                </tbody>
-            </table>
-        </div>
+    <div class="row justify-content-center" style="margin: 10px">
+        <a type="button" class="btn btn-success" th:href="@{/show/0}">add</a>
+    </div>
+    <table class="table table-striped">
+        <thead class="thead-dark">
+        <tr>
+            <th scope="col">
+                <a th:href="@{/(sortBy = 'id', sort = 'down')}" href="#">V</a>
+                <a th:href="@{/(sortBy = 'id', sort = 'up')}" href="#">A</a>
+                <span style="padding-left:5px">id</span>
+            </th>
+            <th scope="col">
+                <a th:href="@{/(sortBy = 'title', sort = 'down')}" href="#">V</a>
+                <a th:href="@{/(sortBy = 'title', sort = 'up')}" href="#">A</a>
+                <span style="padding-left:5px">title</span>
+            </th>
+            <th scope="col">
+                <a th:href="@{/(sortBy = 'cost', sort = 'down')}" href="#">V</a>
+                <a th:href="@{/(sortBy = 'cost', sort = 'up')}" href="#">A</a>
+                <span style="padding-left:5px">cost</span>
+            </th>
+            <th scope="col">action</th>
+        </tr>
+        </thead>
+        <tbody>
+        <tr th:each="product : ${page.getContent()}">
+            <th scope="row" th:text="${product.id}">product id</th>
+            <td th:text="${product.title}">product title</td>
+            <td th:text="${product.cost}">product cost</td>
+            <td>
+                <a type="button" class="btn btn-warning" th:href="@{/show/{id}(id = ${product.id})}">edit</a>
+                <a type="button" class="btn btn-danger" th:href="@{/del/{id}(id = ${product.id})}">del</a>
+            </td>
+        </tr>
+        </tbody>
+    </table>
 
-        <!-- Optional JavaScript -->
-        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-        <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
-        <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js" integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV" crossorigin="anonymous"></script>
+    <nav aria-label="Product's catalog">
+        <ul class="pagination justify-content-center">
 
-    </body>
+            <li class="page-item " th:classappend="${page.isFirst()} ? 'disabled'">
+                <a class="page-link" href="#" th:href="@{/(page = ${page.getNumber()})}">Previous</a>
+            </li>
+
+            <li th:each="num : ${#numbers.sequence(1, page.totalPages)}" class="page-item"
+                th:classappend="${num == page.getNumber() + 1} ? 'active'">
+                <a class="page-link" href="#" th:href="@{/(page = ${num})}" th:text="${num}">1</a></li>
+            </li>
+
+            <li class="page-item" th:classappend="${page.isLast()} ? 'disabled'">
+                <a class="page-link" href="#" th:href="@{/(page = ${page.getNumber() + 2})}">Next</a>
+            </li>
+        </ul>
+    </nav>
+
+</div>
+
+<!-- Optional JavaScript -->
+<!-- jQuery first, then Popper.js, then Bootstrap JS -->
+<script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+        crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
+        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
+        crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+        crossorigin="anonymous"></script>
+
+</body>
 </html>
