--- a/Java/spring_intro/spring-intro/spring-boot/src/main/resources/templates/product-edit-form.html
+++ b/Java/spring_intro/spring-intro/spring-boot/src/main/resources/templates/product-edit-form.html
@@ -12,12 +12,29 @@
 </head>
 <body>
 <div class="container">
+    <!-- Nav bar -->
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
+                class="navbar-toggler" data-target="#navbarNavAltMarkup" data-toggle="collapse" type="button">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+            <div class="navbar-nav">
+                <a class="nav-link" href="#" th:href="@{/}">Home</a>
+                <a class="nav-link" href="#" th:href="@{/products}">Products</a>
+                <a class="nav-link" href="#" th:href="@{/users}">Users</a>
+                <a class="nav-link" href="#" th:href="@{/roles}">Roles</a>
+                <a aria-disabled="true" class="nav-link disabled" href="#" tabindex="-1">Login</a>
+            </div>
+        </div>
+    </nav>
+
     <!-- Content here -->
     <div class="row justify-content-center">
-        <a class="btn btn-primary" style="margin-top: 50px" th:href="@{/}" type="button">Cancel</a>
+        <a class="btn btn-primary" style="margin-top: 50px" th:href="@{/products}" type="button">Cancel</a>
     </div>
 
-    <form action="#" method="post" th:action="@{/save}" th:object="${product}">
+    <form action="#" method="post" th:action="@{/products/save}" th:object="${product}">
         <input id="id" th:field="*{id}" type="hidden"/>
 
         <div class="form-group">
