--- a/Java/spring_intro/spring-intro/spring-boot/src/main/resources/templates/index.html
+++ b/Java/spring_intro/spring-intro/spring-boot/src/main/resources/templates/index.html
@@ -13,23 +13,8 @@
 <body>
 <div class="container">
     <!-- Nav bar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <button aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation"
-                class="navbar-toggler" data-target="#navbarNavAltMarkup" data-toggle="collapse" type="button">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse justify-content-between" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" href="#" th:href="@{/}">Home</a>
-                <a class="nav-link" href="#" th:href="@{/products}">Products</a>
-                <a class="nav-link" href="#" th:href="@{/users}">Users</a>
-                <a class="nav-link" href="#" th:href="@{/roles}">Roles</a>
-            </div>
-            <div class="navbar-nav">
-                <a aria-disabled="true" class="nav-link disabled" href="#" tabindex="-1">Login</a>
-            </div>
-        </div>
-    </nav>
+    <div th:replace="/fragments/basic :: navBar"></div>
+
     <!-- Content here -->
     <div class="jumbotron jumbotron-fluid">
         <div class="container">
@@ -38,19 +23,7 @@
         </div>
     </div>
 </div>
-</body>
 
-<!-- Optional JavaScript -->
-<!-- jQuery first, then Popper.js, then Bootstrap JS -->
-<script crossorigin="anonymous"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        src="https://code.jquery.com/jquery-3.5.1.slim.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"></script>
-<script crossorigin="anonymous"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
-
+<div th:replace="/fragments/basic :: bodySripts"></div>
 </body>
 </html>
