--- a/Java/spring_intro/spring-intro/spring-boot/src/main/resources/templates/user-edit-form.html
+++ b/Java/spring_intro/spring-intro/spring-boot/src/main/resources/templates/user-edit-form.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ru" xmlns:th="http://www.thymeleaf.org">
+<html>
 <head>
     <meta charset="UTF-8">
 
@@ -32,8 +33,6 @@
             <label for="password">password</label>
             <input class="form-control" id="password" placeholder="enter password" th:field="*{password}" type="text"/>
         </div>
-
-        <!--        <input id="roles" th:field="*{roles}" type="hidden"/>-->
 
         <div class="form-group">
             <label>Roles:</label>
